--- a/app/build.gradle
+++ b/app/build.gradle
@@ -313,12 +313,12 @@ tasks.register("pullAllureResults") {
             delete targetDir
         }
         exec {
-            commandLine "adb", "pull", "/storage/self/primary/Documents/allure-results", "build"
+            commandLine "adb", "pull", "/sdcard/Documents/allure-results", "build"
         }
     }
 }
 
-// Автоматическое выполнение после тасок, содержащих "connected"/
+// Автоматическое выполнение после тасок, содержащих "connected"
 gradle.taskGraph.afterTask { Task task, TaskState state ->
     if (task.name.toLowerCase().startsWith("connected") && task.name.toLowerCase().endsWith("androidtest")) {
         def allureTask = tasks.named("pullAllureResults").get()
@@ -334,7 +334,7 @@ tasks.register("clearDeviceAllureResults") {
     description = "Clears allure-results directory on Android device"
 
     doLast {
-        def adbCommand = ["adb", "shell", "rm", "-rf", "/storage/self/primary/Documents/allure-results"]
+        def adbCommand = ["adb", "shell", "rm", "-rf", "/sdcard/Documents/allure-results"]
         println "Running: ${adbCommand.join(' ')}"
         exec {
             commandLine adbCommand
@@ -352,3 +352,4 @@ gradle.taskGraph.beforeTask { Task task ->
         }
     }
 }
+
